src/core/syrec/parser/antlr/TSyrecParser.cpp

// Generated from C:/School/MThesis/mqt-syrec-antlr/src/core/syrec/parser/antlr/grammar/TSyrecParser.g4 by ANTLR 4.13.2


#include "TSyrecParserVisitor.h"

#include "TSyrecParser.h"


using namespace antlrcpp;
using namespace syrecParser;

using namespace antlr4;

namespace {

struct TSyrecParserStaticData final {
  TSyrecParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  TSyrecParserStaticData(const TSyrecParserStaticData&) = delete;
  TSyrecParserStaticData(TSyrecParserStaticData&&) = delete;
  TSyrecParserStaticData& operator=(const TSyrecParserStaticData&) = delete;
  TSyrecParserStaticData& operator=(TSyrecParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag tsyrecparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<TSyrecParserStaticData> tsyrecparserParserStaticData = nullptr;

void tsyrecparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (tsyrecparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(tsyrecparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<TSyrecParserStaticData>(
    std::vector<std::string>{
      "number", "program", "module", "parameterList", "parameter", "signalList", 
      "signalDeclaration", "statementList", "statement", "callStatement", 
      "loopVariableDefinition", "loopStepsizeDefinition", "forStatement", 
      "ifStatement", "unaryStatement", "assignStatement", "swapStatement", 
      "skipStatement", "signal", "expression", "binaryExpression", "unaryExpression", 
      "shiftExpression"
    },
    std::vector<std::string>{
      "", "'++='", "'--='", "'~='", "'+='", "'-='", "'^='", "'+'", "'-'", 
      "'*'", "'*>'", "'/'", "'%'", "'<<'", "'>>'", "'<=>'", "'>='", "'<='", 
      "'>'", "'<'", "'='", "'!='", "'&&'", "'||'", "'!'", "'&'", "'~'", 
      "'|'", "'^'", "'call'", "'uncall'", "'in'", "'out'", "'inout'", "'wire'", 
      "'state'", "'$'", "'#'", "';'", "','", "'('", "')'", "'['", "']'", 
      "'module'", "'for'", "'do'", "'to'", "'step'", "'rof'", "'if'", "'then'", 
      "'else'", "'fi'", "'skip'", "'.'", "':'"
    },
    std::vector<std::string>{
      "", "OP_INCREMENT_ASSIGN", "OP_DECREMENT_ASSIGN", "OP_INVERT_ASSIGN", 
      "OP_ADD_ASSIGN", "OP_SUB_ASSIGN", "OP_XOR_ASSIGN", "OP_PLUS", "OP_MINUS", 
      "OP_MULTIPLY", "OP_UPPER_BIT_MULTIPLY", "OP_DIVISION", "OP_MODULO", 
      "OP_LEFT_SHIFT", "OP_RIGHT_SHIFT", "OP_SWAP", "OP_GREATER_OR_EQUAL", 
      "OP_LESS_OR_EQUAL", "OP_GREATER_THAN", "OP_LESS_THAN", "OP_EQUAL", 
      "OP_NOT_EQUAL", "OP_LOGICAL_AND", "OP_LOGICAL_OR", "OP_LOGICAL_NEGATION", 
      "OP_BITWISE_AND", "OP_BITWISE_NEGATION", "OP_BITWISE_OR", "OP_BITWISE_XOR", 
      "OP_CALL", "OP_UNCALL", "VAR_TYPE_IN", "VAR_TYPE_OUT", "VAR_TYPE_INOUT", 
      "VAR_TYPE_WIRE", "VAR_TYPE_STATE", "LOOP_VARIABLE_PREFIX", "SIGNAL_WIDTH_PREFIX", 
      "STATEMENT_DELIMITER", "PARAMETER_DELIMITER", "OPEN_RBRACKET", "CLOSE_RBRACKET", 
      "OPEN_SBRACKET", "CLOSE_SBRACKET", "KEYWORD_MODULE", "KEYWORD_FOR", 
      "KEYWORD_DO", "KEYWORD_TO", "KEYWORD_STEP", "KEYWORD_ROF", "KEYWORD_IF", 
      "KEYWORD_THEN", "KEYWORD_ELSE", "KEYWORD_FI", "KEYWORD_SKIP", "BITRANGE_START_PREFIX", 
      "BITRANGE_END_PREFIX", "SKIPABLEWHITSPACES", "LINE_COMMENT", "MULTI_LINE_COMMENT", 
      "IDENT", "INT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  tsyrecparserParserStaticData = std::move(staticData);
}

}

TSyrecParser::TSyrecParser(TokenStream *input) : TSyrecParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

TSyrecParser::TSyrecParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  TSyrecParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *tsyrecparserParserStaticData->atn, tsyrecparserParserStaticData->decisionToDFA, tsyrecparserParserStaticData->sharedContextCache, options);
}

TSyrecParser::~TSyrecParser() {
  delete _interpreter;
}

const atn::ATN& TSyrecParser::getATN() const {
  return *tsyrecparserParserStaticData->atn;
}

std::string TSyrecParser::getGrammarFileName() const {
  return "TSyrecParser.g4";
}

const std::vector<std::string>& TSyrecParser::getRuleNames() const {
  return tsyrecparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& TSyrecParser::getVocabulary() const {
  return tsyrecparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView TSyrecParser::getSerializedATN() const {
  return tsyrecparserParserStaticData->serializedATN;
}


//----------------- NumberContext ------------------------------------------------------------------

TSyrecParser::NumberContext::NumberContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t TSyrecParser::NumberContext::getRuleIndex() const {
  return TSyrecParser::RuleNumber;
}

void TSyrecParser::NumberContext::copyFrom(NumberContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- NumberFromSignalwidthContext ------------------------------------------------------------------

tree::TerminalNode* TSyrecParser::NumberFromSignalwidthContext::SIGNAL_WIDTH_PREFIX() {
  return getToken(TSyrecParser::SIGNAL_WIDTH_PREFIX, 0);
}

tree::TerminalNode* TSyrecParser::NumberFromSignalwidthContext::IDENT() {
  return getToken(TSyrecParser::IDENT, 0);
}

TSyrecParser::NumberFromSignalwidthContext::NumberFromSignalwidthContext(NumberContext *ctx) { copyFrom(ctx); }


std::any TSyrecParser::NumberFromSignalwidthContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TSyrecParserVisitor*>(visitor))
    return parserVisitor->visitNumberFromSignalwidth(this);
  else
    return visitor->visitChildren(this);
}
//----------------- NumberFromLoopVariableContext ------------------------------------------------------------------

tree::TerminalNode* TSyrecParser::NumberFromLoopVariableContext::LOOP_VARIABLE_PREFIX() {
  return getToken(TSyrecParser::LOOP_VARIABLE_PREFIX, 0);
}

tree::TerminalNode* TSyrecParser::NumberFromLoopVariableContext::IDENT() {
  return getToken(TSyrecParser::IDENT, 0);
}

TSyrecParser::NumberFromLoopVariableContext::NumberFromLoopVariableContext(NumberContext *ctx) { copyFrom(ctx); }


std::any TSyrecParser::NumberFromLoopVariableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TSyrecParserVisitor*>(visitor))
    return parserVisitor->visitNumberFromLoopVariable(this);
  else
    return visitor->visitChildren(this);
}
//----------------- NumberFromConstantContext ------------------------------------------------------------------

tree::TerminalNode* TSyrecParser::NumberFromConstantContext::INT() {
  return getToken(TSyrecParser::INT, 0);
}

TSyrecParser::NumberFromConstantContext::NumberFromConstantContext(NumberContext *ctx) { copyFrom(ctx); }


std::any TSyrecParser::NumberFromConstantContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TSyrecParserVisitor*>(visitor))
    return parserVisitor->visitNumberFromConstant(this);
  else
    return visitor->visitChildren(this);
}
//----------------- NumberFromExpressionContext ------------------------------------------------------------------

tree::TerminalNode* TSyrecParser::NumberFromExpressionContext::OPEN_RBRACKET() {
  return getToken(TSyrecParser::OPEN_RBRACKET, 0);
}

tree::TerminalNode* TSyrecParser::NumberFromExpressionContext::CLOSE_RBRACKET() {
  return getToken(TSyrecParser::CLOSE_RBRACKET, 0);
}

std::vector<TSyrecParser::NumberContext *> TSyrecParser::NumberFromExpressionContext::number() {
  return getRuleContexts<TSyrecParser::NumberContext>();
}

TSyrecParser::NumberContext* TSyrecParser::NumberFromExpressionContext::number(size_t i) {
  return getRuleContext<TSyrecParser::NumberContext>(i);
}

tree::TerminalNode* TSyrecParser::NumberFromExpressionContext::OP_PLUS() {
  return getToken(TSyrecParser::OP_PLUS, 0);
}

tree::TerminalNode* TSyrecParser::NumberFromExpressionContext::OP_MINUS() {
  return getToken(TSyrecParser::OP_MINUS, 0);
}

tree::TerminalNode* TSyrecParser::NumberFromExpressionContext::OP_MULTIPLY() {
  return getToken(TSyrecParser::OP_MULTIPLY, 0);
}

tree::TerminalNode* TSyrecParser::NumberFromExpressionContext::OP_DIVISION() {
  return getToken(TSyrecParser::OP_DIVISION, 0);
}

TSyrecParser::NumberFromExpressionContext::NumberFromExpressionContext(NumberContext *ctx) { copyFrom(ctx); }


std::any TSyrecParser::NumberFromExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TSyrecParserVisitor*>(visitor))
    return parserVisitor->visitNumberFromExpression(this);
  else
    return visitor->visitChildren(this);
}
TSyrecParser::NumberContext* TSyrecParser::number() {
  NumberContext *_localctx = _tracker.createInstance<NumberContext>(_ctx, getState());
  enterRule(_localctx, 0, TSyrecParser::RuleNumber);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(57);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case TSyrecParser::INT: {
        _localctx = _tracker.createInstance<TSyrecParser::NumberFromConstantContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(46);
        match(TSyrecParser::INT);
        break;
      }

      case TSyrecParser::SIGNAL_WIDTH_PREFIX: {
        _localctx = _tracker.createInstance<TSyrecParser::NumberFromSignalwidthContext>(_localctx);
        enterOuterAlt(_localctx, 2);
        setState(47);
        match(TSyrecParser::SIGNAL_WIDTH_PREFIX);
        setState(48);
        match(TSyrecParser::IDENT);
        break;
      }

      case TSyrecParser::LOOP_VARIABLE_PREFIX: {
        _localctx = _tracker.createInstance<TSyrecParser::NumberFromLoopVariableContext>(_localctx);
        enterOuterAlt(_localctx, 3);
        setState(49);
        match(TSyrecParser::LOOP_VARIABLE_PREFIX);
        setState(50);
        match(TSyrecParser::IDENT);
        break;
      }

      case TSyrecParser::OPEN_RBRACKET: {
        _localctx = _tracker.createInstance<TSyrecParser::NumberFromExpressionContext>(_localctx);
        enterOuterAlt(_localctx, 4);
        setState(51);
        match(TSyrecParser::OPEN_RBRACKET);
        setState(52);
        antlrcpp::downCast<NumberFromExpressionContext *>(_localctx)->lhsOperand = number();
        setState(53);
        antlrcpp::downCast<NumberFromExpressionContext *>(_localctx)->op = _input->LT(1);
        _la = _input->LA(1);
        if (!((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & 2944) != 0))) {
          antlrcpp::downCast<NumberFromExpressionContext *>(_localctx)->op = _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
        setState(54);
        antlrcpp::downCast<NumberFromExpressionContext *>(_localctx)->rhsOperand = number();
        setState(55);
        match(TSyrecParser::CLOSE_RBRACKET);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramContext ------------------------------------------------------------------

TSyrecParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TSyrecParser::ProgramContext::EOF() {
  return getToken(TSyrecParser::EOF, 0);
}

std::vector<TSyrecParser::ModuleContext *> TSyrecParser::ProgramContext::module() {
  return getRuleContexts<TSyrecParser::ModuleContext>();
}

TSyrecParser::ModuleContext* TSyrecParser::ProgramContext::module(size_t i) {
  return getRuleContext<TSyrecParser::ModuleContext>(i);
}


size_t TSyrecParser::ProgramContext::getRuleIndex() const {
  return TSyrecParser::RuleProgram;
}


std::any TSyrecParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TSyrecParserVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

TSyrecParser::ProgramContext* TSyrecParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 2, TSyrecParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(60); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(59);
      module();
      setState(62); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == TSyrecParser::KEYWORD_MODULE);
    setState(64);
    match(TSyrecParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ModuleContext ------------------------------------------------------------------

TSyrecParser::ModuleContext::ModuleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TSyrecParser::ModuleContext::KEYWORD_MODULE() {
  return getToken(TSyrecParser::KEYWORD_MODULE, 0);
}

tree::TerminalNode* TSyrecParser::ModuleContext::IDENT() {
  return getToken(TSyrecParser::IDENT, 0);
}

tree::TerminalNode* TSyrecParser::ModuleContext::OPEN_RBRACKET() {
  return getToken(TSyrecParser::OPEN_RBRACKET, 0);
}

tree::TerminalNode* TSyrecParser::ModuleContext::CLOSE_RBRACKET() {
  return getToken(TSyrecParser::CLOSE_RBRACKET, 0);
}

TSyrecParser::StatementListContext* TSyrecParser::ModuleContext::statementList() {
  return getRuleContext<TSyrecParser::StatementListContext>(0);
}

TSyrecParser::ParameterListContext* TSyrecParser::ModuleContext::parameterList() {
  return getRuleContext<TSyrecParser::ParameterListContext>(0);
}

std::vector<TSyrecParser::SignalListContext *> TSyrecParser::ModuleContext::signalList() {
  return getRuleContexts<TSyrecParser::SignalListContext>();
}

TSyrecParser::SignalListContext* TSyrecParser::ModuleContext::signalList(size_t i) {
  return getRuleContext<TSyrecParser::SignalListContext>(i);
}


size_t TSyrecParser::ModuleContext::getRuleIndex() const {
  return TSyrecParser::RuleModule;
}


std::any TSyrecParser::ModuleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TSyrecParserVisitor*>(visitor))
    return parserVisitor->visitModule(this);
  else
    return visitor->visitChildren(this);
}

TSyrecParser::ModuleContext* TSyrecParser::module() {
  ModuleContext *_localctx = _tracker.createInstance<ModuleContext>(_ctx, getState());
  enterRule(_localctx, 4, TSyrecParser::RuleModule);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(66);
    match(TSyrecParser::KEYWORD_MODULE);
    setState(67);
    match(TSyrecParser::IDENT);
    setState(68);
    match(TSyrecParser::OPEN_RBRACKET);
    setState(70);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 15032385536) != 0)) {
      setState(69);
      parameterList();
    }
    setState(72);
    match(TSyrecParser::CLOSE_RBRACKET);
    setState(76);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == TSyrecParser::VAR_TYPE_WIRE

    || _la == TSyrecParser::VAR_TYPE_STATE) {
      setState(73);
      signalList();
      setState(78);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(79);
    statementList();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterListContext ------------------------------------------------------------------

TSyrecParser::ParameterListContext::ParameterListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<TSyrecParser::ParameterContext *> TSyrecParser::ParameterListContext::parameter() {
  return getRuleContexts<TSyrecParser::ParameterContext>();
}

TSyrecParser::ParameterContext* TSyrecParser::ParameterListContext::parameter(size_t i) {
  return getRuleContext<TSyrecParser::ParameterContext>(i);
}

std::vector<tree::TerminalNode *> TSyrecParser::ParameterListContext::PARAMETER_DELIMITER() {
  return getTokens(TSyrecParser::PARAMETER_DELIMITER);
}

tree::TerminalNode* TSyrecParser::ParameterListContext::PARAMETER_DELIMITER(size_t i) {
  return getToken(TSyrecParser::PARAMETER_DELIMITER, i);
}


size_t TSyrecParser::ParameterListContext::getRuleIndex() const {
  return TSyrecParser::RuleParameterList;
}


std::any TSyrecParser::ParameterListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TSyrecParserVisitor*>(visitor))
    return parserVisitor->visitParameterList(this);
  else
    return visitor->visitChildren(this);
}

TSyrecParser::ParameterListContext* TSyrecParser::parameterList() {
  ParameterListContext *_localctx = _tracker.createInstance<ParameterListContext>(_ctx, getState());
  enterRule(_localctx, 6, TSyrecParser::RuleParameterList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(81);
    parameter();
    setState(86);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == TSyrecParser::PARAMETER_DELIMITER) {
      setState(82);
      match(TSyrecParser::PARAMETER_DELIMITER);
      setState(83);
      parameter();
      setState(88);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterContext ------------------------------------------------------------------

TSyrecParser::ParameterContext::ParameterContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TSyrecParser::SignalDeclarationContext* TSyrecParser::ParameterContext::signalDeclaration() {
  return getRuleContext<TSyrecParser::SignalDeclarationContext>(0);
}

tree::TerminalNode* TSyrecParser::ParameterContext::VAR_TYPE_IN() {
  return getToken(TSyrecParser::VAR_TYPE_IN, 0);
}

tree::TerminalNode* TSyrecParser::ParameterContext::VAR_TYPE_OUT() {
  return getToken(TSyrecParser::VAR_TYPE_OUT, 0);
}

tree::TerminalNode* TSyrecParser::ParameterContext::VAR_TYPE_INOUT() {
  return getToken(TSyrecParser::VAR_TYPE_INOUT, 0);
}


size_t TSyrecParser::ParameterContext::getRuleIndex() const {
  return TSyrecParser::RuleParameter;
}


std::any TSyrecParser::ParameterContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TSyrecParserVisitor*>(visitor))
    return parserVisitor->visitParameter(this);
  else
    return visitor->visitChildren(this);
}

TSyrecParser::ParameterContext* TSyrecParser::parameter() {
  ParameterContext *_localctx = _tracker.createInstance<ParameterContext>(_ctx, getState());
  enterRule(_localctx, 8, TSyrecParser::RuleParameter);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(89);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 15032385536) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(90);
    signalDeclaration();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SignalListContext ------------------------------------------------------------------

TSyrecParser::SignalListContext::SignalListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<TSyrecParser::SignalDeclarationContext *> TSyrecParser::SignalListContext::signalDeclaration() {
  return getRuleContexts<TSyrecParser::SignalDeclarationContext>();
}

TSyrecParser::SignalDeclarationContext* TSyrecParser::SignalListContext::signalDeclaration(size_t i) {
  return getRuleContext<TSyrecParser::SignalDeclarationContext>(i);
}

tree::TerminalNode* TSyrecParser::SignalListContext::VAR_TYPE_WIRE() {
  return getToken(TSyrecParser::VAR_TYPE_WIRE, 0);
}

tree::TerminalNode* TSyrecParser::SignalListContext::VAR_TYPE_STATE() {
  return getToken(TSyrecParser::VAR_TYPE_STATE, 0);
}

std::vector<tree::TerminalNode *> TSyrecParser::SignalListContext::PARAMETER_DELIMITER() {
  return getTokens(TSyrecParser::PARAMETER_DELIMITER);
}

tree::TerminalNode* TSyrecParser::SignalListContext::PARAMETER_DELIMITER(size_t i) {
  return getToken(TSyrecParser::PARAMETER_DELIMITER, i);
}


size_t TSyrecParser::SignalListContext::getRuleIndex() const {
  return TSyrecParser::RuleSignalList;
}


std::any TSyrecParser::SignalListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TSyrecParserVisitor*>(visitor))
    return parserVisitor->visitSignalList(this);
  else
    return visitor->visitChildren(this);
}

TSyrecParser::SignalListContext* TSyrecParser::signalList() {
  SignalListContext *_localctx = _tracker.createInstance<SignalListContext>(_ctx, getState());
  enterRule(_localctx, 10, TSyrecParser::RuleSignalList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(92);
    _la = _input->LA(1);
    if (!(_la == TSyrecParser::VAR_TYPE_WIRE

    || _la == TSyrecParser::VAR_TYPE_STATE)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(93);
    signalDeclaration();
    setState(98);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == TSyrecParser::PARAMETER_DELIMITER) {
      setState(94);
      match(TSyrecParser::PARAMETER_DELIMITER);
      setState(95);
      signalDeclaration();
      setState(100);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SignalDeclarationContext ------------------------------------------------------------------

TSyrecParser::SignalDeclarationContext::SignalDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TSyrecParser::SignalDeclarationContext::IDENT() {
  return getToken(TSyrecParser::IDENT, 0);
}

std::vector<tree::TerminalNode *> TSyrecParser::SignalDeclarationContext::OPEN_SBRACKET() {
  return getTokens(TSyrecParser::OPEN_SBRACKET);
}

tree::TerminalNode* TSyrecParser::SignalDeclarationContext::OPEN_SBRACKET(size_t i) {
  return getToken(TSyrecParser::OPEN_SBRACKET, i);
}

std::vector<tree::TerminalNode *> TSyrecParser::SignalDeclarationContext::CLOSE_SBRACKET() {
  return getTokens(TSyrecParser::CLOSE_SBRACKET);
}

tree::TerminalNode* TSyrecParser::SignalDeclarationContext::CLOSE_SBRACKET(size_t i) {
  return getToken(TSyrecParser::CLOSE_SBRACKET, i);
}

tree::TerminalNode* TSyrecParser::SignalDeclarationContext::OPEN_RBRACKET() {
  return getToken(TSyrecParser::OPEN_RBRACKET, 0);
}

tree::TerminalNode* TSyrecParser::SignalDeclarationContext::CLOSE_RBRACKET() {
  return getToken(TSyrecParser::CLOSE_RBRACKET, 0);
}

std::vector<tree::TerminalNode *> TSyrecParser::SignalDeclarationContext::INT() {
  return getTokens(TSyrecParser::INT);
}

tree::TerminalNode* TSyrecParser::SignalDeclarationContext::INT(size_t i) {
  return getToken(TSyrecParser::INT, i);
}


size_t TSyrecParser::SignalDeclarationContext::getRuleIndex() const {
  return TSyrecParser::RuleSignalDeclaration;
}


std::any TSyrecParser::SignalDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TSyrecParserVisitor*>(visitor))
    return parserVisitor->visitSignalDeclaration(this);
  else
    return visitor->visitChildren(this);
}

TSyrecParser::SignalDeclarationContext* TSyrecParser::signalDeclaration() {
  SignalDeclarationContext *_localctx = _tracker.createInstance<SignalDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 12, TSyrecParser::RuleSignalDeclaration);
  size_t _la = 0;
